
    o	The Mac OS X version now produces an R framework for easier linking
	of R into other programs.  As a result, R.app is now relocatable.

    o	Command-line Mac OS X doesn't attempt to guess whether you are
	running an X server: the default graphical device is now pdf().

    o	Added experimental support for conditionals in NAMESPACE files.


UTILITIES

    o	R CMD check  now runs the (Rd) examples with default RNGkind
	(uniform & normal) and set.seed(1).
	example(*, setRNG = TRUE) does the same.

    o	undoc() in package `tools' has a new default of `use.values =
	NULL' which produces a warning whenever the default values of
	function arguments differ between documentation and code.
	Note that this affects "R CMD check" as well.

    o	Testing examples via massage-examples.pl (as used by R CMD
	check) now restores the search path after every help file.

    o	checkS3methods() in package 'tools' now also looks for generics
	in the loaded namespaces/packages listed in the Depends fields
	of the package's DESCRIPTION file when testing an installed
	package.

    o	The DESCRIPTION file of packages may contain a 'Suggests:'
	field for packages that are only used in examples or
	vignettes.

    o	Added an option to package.dependencies() to handle the
	'Suggests' levels of dependencies.

    o	Vignette dependencies can now be checked and obtained via
	vignetteDepends.

    o	Option 'repositories' to list URLs for package repositories
	added.


C-LEVEL FACILITIES

    o	arraySubscript and vectorSubscript take a new argument which
	is a function pointer that provides access to character
	strings (such as the names vector) rather than assuming these
	are passed in.

    o	R_CheckUserInterrupts is now described in `Writing R Extensions'
	and there is a new equivalent subroutine rchkusr for calling
	from FORTRAN code.

    o	Salloc and Srealloc are provided in S.h as wrappers for S_alloc
	and S_realloc, since current S versions use these forms.
