@@ -45,6 +45,9 @@ as.list.data.frame <- function(x,...) {
     x
 }
 
+as.list.environment <- function(x, all.names=FALSE, ...)
+    .Internal(env2list(x, all.names))
+
 ##as.vector dispatches internally so no need for a generic
 as.vector <- function(x, mode="any") .Internal(as.vector(x,mode))
 as.matrix <- function(x) UseMethod("as.matrix")
