@@ -7,6 +7,7 @@ pairlist(\dots)
 as.list(x, \dots)
 %as.list.default(x, \dots)
 as.pairlist(x)
+as.list.environment(x, all.names=FALSE, \dots)
 
 is.list(x)
 is.pairlist(x)
@@ -19,6 +20,7 @@ alist(\dots)
 \alias{as.list}
 \alias{as.list.default}
 \alias{as.list.data.frame}
+\alias{as.list.environment}
 \alias{as.pairlist}
 \alias{is.list}
 \alias{is.pairlist}
@@ -28,6 +30,7 @@ alist(\dots)
 \arguments{
   \item{\dots}{objects.}
   \item{x}{object to be coerced or tested.}
+  \item{all.names}{a logical indicating whether to copy all values in as.list.environment}
 }
 \details{
   Most lists in \R internally are \emph{Generic
@@ -57,6 +60,10 @@ alist(\dots)
   \code{is.list} and \code{is.pairlist} are generic: you can write
   methods to handle specific classes of objects, see \link{InternalMethods}.
 
+  \code{as.list.environment} copies the named values from an environment to a list. The 
+  user can request that all named objects are copied (normally names that begin with a dot 
+  are not). The output is not sorted and no parent environments are searched.
+
   An empty pairlist, \code{pairlist()} is the same as \code{NULL}.  This
   is different from \code{list()}.
 }
@@ -81,6 +88,13 @@ f <- function()x
 formals(f) <- al <- alist(x=, y=2, \dots=)
 f
 al
+
+##environment->list coercion
+
+e1 <- new.env()
+e1$a <- 10
+e1$b <- 20
+as.list(e1)
 }
 \keyword{list}
 \keyword{manip}
